# OverBuddy

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.txt  README.md  RELEASE.md  eslint.config.js  index.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsr.config.json  vite.config.ts
.github/workflows/: create-release.yml  validate.yml
releases/: OverBuddy_0.1.0_x64_en-US.msi.zip.sig  latest.json
scripts/: cleanup.ts  sync.ts  update.ts
src/: App.css  App.tsx  Menu.tsx  MomentumScroll.tsx  data.ts  main.tsx  reset.d.ts  routeTree.gen.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: backgrounds.rs  config.rs  helpers.rs  lib.rs  main.rs  platforms.rs  steam_helpers.rs
src/assets/: Overwatch.tsx
src/components/: AlertDialog.tsx  AnimatedImage.tsx  Button.tsx  CheckForUpdates.tsx  Error.tsx  ErrorComponent.tsx  ErrorWrapper.tsx  Highlight.tsx  KeyboardButton.tsx  Loading.tsx  Motion.tsx  NotFound.tsx  Progress.tsx  Reporter.tsx  SteamProfile.tsx  SteamProfileList.tsx  Toaster.tsx  TracerImage.tsx  Version.tsx
src/lib/: animations.ts  button.tsx  data.ts  dev.ts  errors.ts  errors.tsx  linkFix.tsx  preventReload.ts  schema.ts  schemas.ts  useHorizontalScroll.ts  useIsOverflow.tsx  useKeyPress.ts
src/routes/: __root.tsx  index.tsx  menu.tsx  settings.tsx  setup.$key.tsx  setup.index.tsx  setup.tsx  setupaaa.tsx
src/routes/setup/: $key.tsx  -constants.ts  NoSteamOverwatch.tsx  index.tsx  select.tsx  steam_setup.tsx
