[package]
name = "overbuddy"
version = "1.2.1"
description = "Elevate your Overwatch™ 2 experience by customizing your in-game menu background with ease."
authors = ["Kirill Tregubov"]
license = "../LICENSE"
repository = "https://github.com/KirillTregubov/OverBuddy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dunce = "1.0.4"
sysinfo = "0.30.12"
vdf-reader = "0.2.0"
keyvalues-parser = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
