[package]
name = "overbuddy"
version = "1.4.4"
description = "Elevate your Overwatch™ 2 experience by customizing your in-game menu background with ease."
authors = ["Kirill Tregubov"]
license = "../LICENSE"
repository = "https://github.com/KirillTregubov/OverBuddy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dunce = "1.0.4"
sysinfo = "0.30.13"
vdf-reader = "0.2.0"
keyvalues-parser = "0.2.0"
similar = "2.6.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
